# wildfire-risk-eu-pipeline

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
config/: data_sources.yaml  features.yaml  pipeline.yaml  scoring.yaml  validation.yaml
data/sample/: buildings_sample.gpkg
docs/: executive_memo.md  leakage_audit.md
outputs/reports/: validation_report.md
outputs/summaries/: executive_memo.md
outputs/validation/: acharnes_2021_false_negatives.csv  acharnes_2021_false_positives.csv  acharnes_2021_metrics.json  acharnes_2021_validation_results.csv  era5_resolution_diagnostic.csv  era5_resolution_diagnostic.md  kalamos_2015_false_negatives.csv  kalamos_2015_false_positives.csv  kalamos_2015_metrics.json  kalamos_2015_validation_results.csv  mati_2018_false_negatives.csv  mati_2018_false_positives.csv  mati_2018_metrics.json  mati_2018_validation_results.csv  v2_model_metrics.json  varybobi_2021_false_negatives.csv  varybobi_2021_false_positives.csv  varybobi_2021_metrics.json  varybobi_2021_validation_results.csv  weight_sensitivity.json
src/acquire/: buildings.py  corine.py  dem.py  effis.py  era5_dynamic.py  era5_fwi.py  firms.py
src/features/: dynamic_event.py  fire_history.py  fire_weather.py  terrain.py  vegetation.py
src/model/: event_model.py
src/qc/: schema.py
tests/: conftest.py  test_acquire_buildings.py  test_acquire_corine.py  test_acquire_dem.py  test_acquire_effis.py  test_dynamic_event.py  test_event_model.py  test_qc_schema.py  test_scoring_engine.py  test_validation.py
(+15 files in other folders)
